--- a/.cflintrc
+++ b/.cflintrc
@@ -1,20 +1,16 @@
 {
     "rule": [],
     "includes": [
-		{ "code": "AVOID_USING_STRUCTNEW" },
-        { "code": "AVOID_USING_ARRAYNEW" },
         { "code": "AVOID_USING_CFINCLUDE_TAG" },
 		{ "code": "AVOID_USING_CFABORT_TAG" },
 		{ "code": "AVOID_USING_CFEXECUTE_TAG" },
 		{ "code": "AVOID_USING_DEBUG_ATTR" },
-		{ "code": "AVOID_USING_CREATEOBJECT" },
 		{ "code": "AVOID_USING_ABORT" },
 		{ "code": "AVOID_USING_ISDATE" },
 		{ "code": "AVOID_USING_ISDEBUGMODE" },
 		{ "code": "AVOID_USING_CFINSERT_TAG" },
 		{ "code": "AVOID_USING_CFUPDATE_TAG" },
 		{ "code": "ARG_VAR_CONFLICT" },
-		{ "code": "ARG_VAR_MIXED" },
 		{ "code": "ARG_HINT_MISSING" },
 		{ "code": "ARG_HINT_MISSING_SCRIPT" },
 		{ "code" : "ARGUMENT_INVALID_NAME" },
@@ -32,8 +28,6 @@
 		{ "code" : "COMPONENT_IS_TEMPORARY" },
 		{ "code" : "COMPONENT_HAS_PREFIX_OR_POSTFIX" },
 		{ "code": "COMPLEX_BOOLEAN_CHECK" },
-        { "code": "EXCESSIVE_FUNCTION_LENGTH" },
-        { "code": "EXCESSIVE_COMPONENT_LENGTH" },
         { "code": "EXCESSIVE_ARGUMENTS" },
 		{ "code": "EXCESSIVE_FUNCTIONS" },
 		{ "code": "EXPLICIT_BOOLEAN_CHECK" },
@@ -41,7 +35,6 @@
 		{ "code": "FUNCTION_HINT_MISSING" },
 		{ "code": "FILE_SHOULD_START_WITH_LOWERCASE" },
         { "code": "LOCAL_LITERAL_VALUE_USED_TOO_OFTEN" },
-		{ "code": "GLOBAL_VAR" },
         { "code": "GLOBAL_LITERAL_VALUE_USED_TOO_OFTEN" },
 		{ "code": "MISSING_VAR" },
 		{ "code" : "METHOD_INVALID_NAME" },
@@ -57,11 +50,10 @@
 		{ "code": "SCOPE_ALLCAPS_NAME" },
 		{ "code": "VAR_ALLCAPS_NAME" },
 		{ "code": "VAR_INVALID_NAME" },
-		{ "code": "VAR_TOO_WORDY" },
-		{ "code": "VAR_IS_TEMPORARY" }
+		{ "code": "VAR_TOO_WORDY" }
     ],
     "inheritParent": false,
     "parameters": {
-		"TooManyFunctionsChecker.maximum" : 20
+		"TooManyFunctionsChecker.maximum" : 50
 	}
 }
