--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,20 @@
-.project
-settings.xml
-.vscode
-.settings
-
+# Artifacts and temp folders
 .artifacts/**
 .tmp/**
 
-test-harness/.engine/**
+# Engine + Secrets
+.env
+.engine/**
+
+# Dependencies
 test-harness/coldbox/**
 test-harness/docbox/**
 test-harness/testbox/**
 test-harness/logs/**
 test-harness/modules/**
+
+# modules
+modules/**
 
 # log files
 logs/**
