--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,12 +18,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        cfengine: [ "lucee@5", "adobe@2018", "adobe@2021" ]
-        coldboxVersion: [ "^6.0.0" ]
+        cfengine: [ "lucee@5", "adobe@2018", "adobe@2021", "adobe@2023" ]
+        coldboxVersion: [ "^6.0.0", "^7.0.0" ]
         experimental: [ false ]
         include:
-          - cfengine: "adobe@2023"
-            coldboxVersion: "^6.0.0"
+          - coldboxVersion: "^7.0.0"
+            cfengine: "lucee@6"
             experimental: true
           - coldboxVersion: "be"
             cfengine: "lucee@5"
@@ -34,9 +34,12 @@ jobs:
           - coldboxVersion: "be"
             cfengine: "adobe@2021"
             experimental: true
+          - coldboxVersion: "be"
+            cfengine: "adobe@2023"
+            experimental: true
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Not Needed in this module
       #- name: Setup Database and Fixtures
@@ -96,7 +99,7 @@ jobs:
 
       - name: Upload Test Results to Artifacts
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: test-results-${{ matrix.cfengine }}-${{ matrix.coldboxVersion }}
           path: |
@@ -109,7 +112,7 @@ jobs:
 
       - name: Upload Debug Logs To Artifacts
         if: ${{ failure() }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: Failure Debugging Info - ${{ matrix.cfengine }} - ${{ matrix.coldboxVersion }}
           path: |
