--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -4,7 +4,13 @@ on:
   push:
     branches:
       - 'development'
+
   workflow_dispatch:
+
+# Unique group name per workflow-branch/tag combo
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   ##########################################################################################
@@ -20,6 +26,9 @@ jobs:
   format:
     name: Code Auto-Formatting
     runs-on: ubuntu-24.04
+    permissions:
+      contents: write
+      checks: write
     steps:
       - uses: actions/checkout@v4
 
@@ -40,5 +49,10 @@ jobs:
     uses: ./.github/workflows/release.yml
     needs: [ tests, format ]
     secrets: inherit
+    permissions:
+      checks: write
+      pull-requests: write
+      contents: write
+      issues: write
     with:
       snapshot: true
