--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,18 +18,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        cfengine: [ "lucee@5", "adobe@2018", "adobe@2021", "adobe@2023" ]
-        coldboxVersion: [ "^6.0.0", "^7.0.0" ]
+        cfengine: [ "boxlang-cfml@1", "lucee@5", "lucee@6", "adobe@2021", "adobe@2023" ]
+        coldboxVersion: [ "^7.0.0" ]
         experimental: [ false ]
+        # Experimental: ColdBox BE vs All Engines
         include:
-          - coldboxVersion: "^7.0.0"
-            cfengine: "lucee@6"
-            experimental: true
           - coldboxVersion: "be"
             cfengine: "lucee@5"
             experimental: true
           - coldboxVersion: "be"
-            cfengine: "adobe@2018"
+            cfengine: "lucee@6"
             experimental: true
           - coldboxVersion: "be"
             cfengine: "adobe@2021"
@@ -38,50 +36,42 @@ jobs:
             cfengine: "adobe@2023"
             experimental: true
           - coldboxVersion: "be"
-            cfengine: "boxlang@1"
+            cfengine: "boxlang-cfml@1"
             experimental: true
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Not Needed in this module
-      #- name: Setup Database and Fixtures
-      #  run: |
-      #    sudo /etc/init.d/mysql start
-      #    mysql -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }} -e 'CREATE DATABASE coolblog;'
-      #    mysql -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }} < test-harness/tests/resources/coolblog.sql
+      # DATABASE SETUP: uncomment if you need to setup a database
+      # - name: Setup Database and Fixtures
+      #   run: |
+      #     sudo systemctl start mysql.service
+      #     mysql -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }} -e 'CREATE DATABASE mementifier;'
+      #     mysql -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }} < test-harness/tests/resources/coolblog.sql
 
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: "temurin"
-          java-version: "11"
+          java-version: "21"
+
+      - name: Setup Environment For Testing Process
+        run: |
+          # Setup .env
+          touch .env
+          # ENV
+          printf "ENVIRONMENT=development\n" >> .env
+          printf "DB_HOST=localhost\n" >> .env
+          printf "DB_USER=${{ env.DB_USER }}\n" >> .env
+          printf "DB_PASSWORD=${{ env.DB_PASSWORD }}\n" >> .env
+          printf "DB_CLASS=com.mysql.cj.jdbc.Driver\n" >> .env
+          printf "DB_BUNDLEVERSION=8.0.19\n" >> .env
+          printf "DB_BUNDLENAME=com.mysql.cj\n" >> .env
 
       - name: Setup CommandBox CLI
         uses: Ortus-Solutions/setup-commandbox@v2.0.1
 
-      - name: Update Commandbox Boxlang Module
-        if: ${{ matrix.cfengine == 'boxlang@1' }}
-        run:
-          box install --force commandbox-boxlang
-
-      # Not Needed in this module
-      #- name: Setup Environment For Testing Process
-      #  working-directory: ./test-harness
-      #  run: |
-      #    # Setup .env
-      #    touch .env
-      #    # ENV
-      #    printf "DB_HOST=localhost\n" >> .env
-      #    printf "DB_DATABASE=mydatabase\n" >> .env
-      #    printf "DB_DRIVER=MySQL\n" >> .env
-      #    printf "DB_USER=${{ env.DB_USER }}\n" >> .env
-      #    printf "DB_PASSWORD=${{ env.DB_PASSWORD }}\n" >> .env
-      #    printf "DB_CLASS=com.mysql.cj.jdbc.Driver\n" >> .env
-      #    printf "DB_BUNDLEVERSION=8.0.19\n" >> .env
-      #    printf "DB_BUNDLENAME=com.mysql.cj\n" >> .env
-
-      - name: Install Test Harness with ColdBox ${{ matrix.coldboxVersion }}
+      - name: Install Dependencies
         run: |
           box install
           cd test-harness
